Improves the report

--- a/HW4/hw4-sol.tex
+++ b/HW4/hw4-sol.tex
@@ -71,10 +71,28 @@
 \begin{document}
 
 \maketitle
-All of the codes are in the proteus and simulated in the protues. Note that
+\par All of the codes are in the proteus and simulated in the protues. Note that
 all of the sections of the first question were merged into a single file. And all of
 the requirments are implemented inside a single file.
 
-For the second section all of the codes of are put into the seperate directory.
+\par For the second section all of the codes of are put into the seperate directory.
 And they are also ran in protues.
+
+\section{Question 1}
+\par In the first part of the question first of all we set the timer counter to the
+normal mode and also we set the frequency according to what is said. Then we
+initialize the I/O ports so that the we can use the value of the timer
+counters. According to the formula mentioned in the book the clock frequency
+will be 4 Hz so by counting it four times will reach the blinking in the half
+speed.
+
+\par In the second part of the question we set the timer counter mode to toggle
+and also the only difference of this part with the previous part is that we
+should set the OCR0 value to the 1 inorder to make the frequency double. According
+to the formual mentioned in book.
+
+\section{Question 2}
+\par In this question we only have to initially set the PWM mode and then by
+experimentally measuring the speed of motor change it to a value which is
+half of the amount by pressing the appropriate key.
 \end{document}
