--- a/HW5/hw5-sol.tex
+++ b/HW5/hw5-sol.tex
@@ -109,7 +109,8 @@ By putting equal both of the equations we reach to the number $R1 = 5060 \Omega$
     \item
         The best mode for putting ADC to sleep is ADC noise reduction mode.
         you can enable this mode by simple putting SM2..0 bits equal to the
-        "001".
+        "001". Also this code is included in the files and proteus file of the
+        previous section.
 
 
 
