--- a/HW7/hw7-sol.tex
+++ b/HW7/hw7-sol.tex
@@ -60,7 +60,8 @@
 
 \title{
 \normalfont \normalsize
-\textit{In The Name of God} \\ \textsc{Computer Engineering Department of Amirkabir University of Technology} \\ [25pt] \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule \huge Microprocessors Homework 3 -  \\ % The assignment title
+\textit{In The Name of God} \\ \textsc{Computer Engineering Department of Amirkabir University of Technology} \\ [25pt] \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
+\huge Microprocessors Homework 7 -  \\ % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
@@ -71,17 +72,21 @@
 \begin{document}
 
 \maketitle
-\par All of the codes are in the proteus and simulated in the protues. Note that
-all of the sections of the first question were merged into a single file. And all of
-the requirments are implemented inside a single file.
+\par All of the delay times are calculated with the clock frequncy of 1Mhz.
+The delay for writing to EEPROM is 1 ms. Which I used a 1000 loop in order to
+create this delay.
 
-\section{Question 1}
-The error according to the datasheet is equal to 0.2 percent. In order to
-decrease the error to zero percent we should set the clock frequency to
-1.8432 MHz.
+And the delay for reading from EEPROM is in order of nano seconds which is
+lower than a single NOP. So I have used only one NOP.
 
+Below are the timing tables for EEPROM 27c64 which I have used in order to
+use it as an EEPROM.
 
+\includegraphics[scale=0.6]{timing.png}
 
+\includegraphics[scale=0.6]{timing-2.png}
+
+You can find the datasheet in the attached documents.
 
 
 \end{document}
