--- a/HW7/hw7-sol.tex
+++ b/HW7/hw7-sol.tex
@@ -82,9 +82,9 @@ lower than a single NOP. So I have used only one NOP.
 Below are the timing tables for EEPROM 27c64 which I have used in order to
 use it as an EEPROM.
 
-\includegraphics[scale=0.6]{timing.png}
+\includegraphics[scale=0.6]{images/timing.png}
 
-\includegraphics[scale=0.6]{timing-2.png}
+\includegraphics[scale=0.6]{images/timing-2.png}
 
 You can find the datasheet in the attached documents.
 
