Adds solution to homework 8

--- a/HW8/hw8-sol.tex
+++ b/HW8/hw8-sol.tex
@@ -8,8 +8,7 @@
 %
 % Original author:
 % Frits Wenneker (http://www.howtotex.com)
-%
-% License:
+% % License:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -61,7 +60,7 @@
 \title{
 \normalfont \normalsize
 \textit{In The Name of God} \\ \textsc{Computer Engineering Department of Amirkabir University of Technology} \\ [25pt] \horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
-\huge Microprocessors Homework 7 -  \\ % The assignment title
+\huge Microprocessors Homework 8  \\ % The assignment title
 \horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
 }
 
@@ -70,6 +69,8 @@
 \date{\normalsize\today}
 
 \begin{document}
+
+\maketitle
 
 \section{Question 1}
 They have different structures inherently that they can't be used interchangably.
