--- a/HW8/hw8-sol.tex
+++ b/HW8/hw8-sol.tex
@@ -117,5 +117,5 @@ Yes, you can. By first polling the device with more priority and then checking
 for the other you can apply priority to output devices.
 
 \section{Question 4}
-The only register that Atmega16 stores is the current address. It only stores PC.
+The only register that Atmega16 stores is the current address. It only stores PC and SREG.
 \end{document}
